--- a/build.xml
+++ b/build.xml
@@ -32,15 +32,7 @@
   </target>
   
   <target name="phpunit">
-    <exec executable="phpunit" dir="${basedir}/source/tests" failonerror="off">
-      <arg line="--log-xml ${basedir}/build/logs/phpunit.xml
-                 --log-pmd ${basedir}/build/logs/phpunit.pmd.xml
-                 --log-metrics ${basedir}/build/logs/metrics.xml
-                 --coverage-xml  ${basedir}/build/logs/coverage.xml
-                 --coverage-html ${basedir}/build/coverage
-                 --coverage-clover ${basedir}/build/coverage/clover.xml
-                 --configuration phpunit.xml
-                " />
+    <exec executable="phpunit" dir="${basedir}/tests" failonerror="off">
     </exec>
   </target>
 </project>
