--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
     </delete>
   </target>
   
-  <target name="build" depends="init,phpunit,php-documentor" />
+  <target name="build" depends="init,phpunit" />
 
   <target name="phpunit">
     <exec executable="phpunit" dir="${basedir}/tests" failonerror="off">
